--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7,7 +7,7 @@
   padding: 3rem 0rem;
   top: 0;
   z-index: 1000;
-   transition: all 0.6s ease;
+  transition: all 0.6s ease;
 }
 
 .navbar-scrolled {
@@ -33,4 +33,16 @@
 
 .nav-content a:hover {
   color: #00adff;
+}
+
+.nav-content a {
+  font-size: clamp(0.85rem, 2vw, 1rem);
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    width: 100%;
+    justify-content: center;
+    padding-top: 4rem;
+  }
 }
