--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,6 +1,5 @@
 .site-footer {
   width: 100%;
-  padding: 0rem 2rem;
   padding-bottom: 2rem;
   padding-top: 1rem;
   background-color: rgba(255, 255, 255, 0.05);
@@ -38,4 +37,28 @@
 .footer-header {
     font-size: 1.75rem;
     text-align: center;
+}
+
+@media (max-width: 768px) {
+  .footer-columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .footer-column {
+    flex: 1 1 45%;
+    width: 100vw;
+    max-width: 40%;
+    justify-content: center;
+    margin: 0 0.30rem;
+  }
+
+  .footer-column h3 {
+    margin-top: 1.5rem;
+  }
+
+  .footer-column li {
+    font-size: 12px;
+  }
 }
