--- a/src/components/resources.css
+++ b/src/components/resources.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
-  padding: 3rem 0rem;
+  padding: 3rem;
 }
 
 .resource-card {
@@ -17,11 +17,12 @@
   border-radius: 12px;
   box-shadow: 0 0 12px rgba(0, 173, 255, 0.15);
   width: 100%;
-  max-width: 40%;
+  max-width: 500px;
   font-size: 16px;
   font-weight: 500;
   color: white;
   text-decoration: none;
+  box-sizing: border-box;
 }
 
 .resource-card:hover {
@@ -64,10 +65,21 @@
   color: white;
 }
 
-@media (max-width: 768px){
-  .resource-card{
-    max-width: 80%;
-    margin-right: 0 2rem;
-    align-items: start;
+@media (max-width: 768px) {
+  .resources-section {
+    padding: 2rem 0rem;
+    width: 100vw;
   }
+  .resource-card{
+    margin: 0 auto;
+    width: 90%;
+  }
+  .resource-link {
+    font-size: 14px !important;
+  }
+  .resource-icon {
+    width: 30px;
+    height: 30px;
+  }
+
 }
