--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,8 +1,8 @@
 .about-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  color: white;
-  align-items: start;
+  display: flex;
+  justify-content: space-between; /* spread left and right */
+  align-items: center;
+  padding: 0 5rem;
 }
 
 .about-text,
@@ -14,10 +14,9 @@
 
 .about-icons {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(4, 1fr); 
   gap: 3rem;
-  padding-right: 3rem;
-  margin-top: 4rem !important;
+  margin-top: -5rem;
 }
 
 .skill-icon {
@@ -30,7 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
+  padding: 0.5rem;
   background-color: rgba(0, 173, 255, 0.08);
   backdrop-filter: blur(6px);
   border: 2px solid rgba(0, 173, 255, 0.3);
@@ -51,8 +50,8 @@
 }
 
 .icon-box img {
-  width: 64px;
-  height: 64px;
+  width: 48px;
+  height: 48px;
   margin-bottom: 6px;
 }
 
