--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -61,6 +61,16 @@
   gap: 0.75rem;
 }
 
+.project-content {
+  align-items: center;
+  gap: 2rem;
+}
+
+.project-image img {
+  max-width: 100%;
+  height: auto;
+}
+
 .project-links {
   display: flex;
   gap: 2rem;
