--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,22 +1,25 @@
 .about-section {
   display: flex;
-  gap: 5rem;
-  align-items: center;
-  padding: 0 5rem;
-}
-
-.about-text,
-.about-icons {
-  display: flex;
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
+  gap: 4rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.about-text {
+  flex: 0 0 500px;
+  max-width: 600px;
 }
 
 .about-icons {
+  flex: 0 0 620px;
+  max-width: 620px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr); 
-  gap: 3rem;
-  margin-top: -5rem;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  margin-top: 5rem;
 }
 
 .skill-icon {
@@ -71,17 +74,17 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1300px) {
   .about-section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 0rem;
+  
   }
 
   .about-text-inner {
-    width: 100%;
     max-width: 100%;
-    padding: 1rem;
     margin: 0 auto;
     text-align: center;
     font-size: 16px;
@@ -91,7 +94,6 @@
   .donatello {
     max-width: 200px;
     margin: 0 auto 1rem;
-    display: block;
     padding-top: 1.5rem;
   }
 
